--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -527,86 +527,86 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col0 {\n",
+       "    #T_642407d2_4404_11ea_a801_acde48001122row0_col0 {\n",
        "            background-color:  #08306b;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col1 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row0_col1 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col2 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row0_col2 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col0 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row1_col0 {\n",
        "            background-color:  #add0e6;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col1 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row1_col1 {\n",
        "            background-color:  #4090c5;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col2 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row1_col2 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col0 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row2_col0 {\n",
        "            background-color:  #e3eef9;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col1 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row2_col1 {\n",
        "            background-color:  #4090c5;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col2 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row2_col2 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col0 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row3_col0 {\n",
        "            background-color:  #e1edf8;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col1 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row3_col1 {\n",
        "            background-color:  #08306b;\n",
        "            color:  #f1f1f1;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col2 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row3_col2 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col0 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row4_col0 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col1 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row4_col1 {\n",
        "            background-color:  #e5eff9;\n",
        "            color:  #000000;\n",
-       "        }    #T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col2 {\n",
+       "        }    #T_642407d2_4404_11ea_a801_acde48001122row4_col2 {\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >redness</th>        <th class=\"col_heading level0 col1\" >elongation</th>        <th class=\"col_heading level0 col2\" >fruit</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_642407d2_4404_11ea_a801_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >redness</th>        <th class=\"col_heading level0 col1\" >elongation</th>        <th class=\"col_heading level0 col2\" >fruit</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col0\" class=\"data row0 col0\" >84.0122</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col1\" class=\"data row0 col1\" >0.869565</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row0_col2\" class=\"data row0 col2\" >1</td>\n",
+       "                        <th id=\"T_642407d2_4404_11ea_a801_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row0_col0\" class=\"data row0 col0\" >84.0122</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row0_col1\" class=\"data row0 col1\" >0.869565</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row0_col2\" class=\"data row0 col2\" >1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col0\" class=\"data row1 col0\" >37.7764</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col1\" class=\"data row1 col1\" >1</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row1_col2\" class=\"data row1 col2\" >1</td>\n",
+       "                        <th id=\"T_642407d2_4404_11ea_a801_acde48001122level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row1_col0\" class=\"data row1 col0\" >37.7764</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row1_col1\" class=\"data row1 col1\" >1</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row1_col2\" class=\"data row1 col2\" >1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col0\" class=\"data row2 col0\" >21.8604</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col1\" class=\"data row2 col1\" >1</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "                        <th id=\"T_642407d2_4404_11ea_a801_acde48001122level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row2_col0\" class=\"data row2 col0\" >21.8604</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row2_col1\" class=\"data row2 col1\" >1</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row2_col2\" class=\"data row2 col2\" >1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col0\" class=\"data row3 col0\" >22.5586</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col1\" class=\"data row3 col1\" >1.07692</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row3_col2\" class=\"data row3 col2\" >1</td>\n",
+       "                        <th id=\"T_642407d2_4404_11ea_a801_acde48001122level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row3_col0\" class=\"data row3 col0\" >22.5586</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row3_col1\" class=\"data row3 col1\" >1.07692</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row3_col2\" class=\"data row3 col2\" >1</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col0\" class=\"data row4 col0\" >14.9414</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col1\" class=\"data row4 col1\" >0.888889</td>\n",
-       "                        <td id=\"T_a74fd62a_4081_11ea_9e0e_784f436f0e17row4_col2\" class=\"data row4 col2\" >1</td>\n",
+       "                        <th id=\"T_642407d2_4404_11ea_a801_acde48001122level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row4_col0\" class=\"data row4 col0\" >14.9414</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row4_col1\" class=\"data row4 col1\" >0.888889</td>\n",
+       "                        <td id=\"T_642407d2_4404_11ea_a801_acde48001122row4_col2\" class=\"data row4 col2\" >1</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x10f35dc10>"
+       "<pandas.io.formats.style.Styler at 0x12bdb15d0>"
       ]
      },
      "execution_count": 10,
@@ -1307,39 +1307,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "from utilities import plot_confusion_matrix\n",
-    "\n",
-    "tn, fp, fn, tp = confusion_matrix(Ytest.ravel(), Ytest_predicted).ravel()\n",
-    "print(\"TP={}, FP={}, FN={}, TP={}\".format(tn, fp, fn, tp))\n",
-    "print(\"Balanced error rate as 0.5*(fp/(tn+fp)+fn/(tp+fn))= {}\".format(0.5*(fp/(tn+fp)+fn/(tp+fn))))\n",
-    "print(\"Balanced error rate as 1-balanced_accuracy = {}\".format(1-accuracy_score(Ytest.ravel(), Ytest_predicted)))\n",
-    "\n",
-    "class_names = np.array([\"apple\", \"banana\"])\n",
-    "# Plot non-normalized confusion matrix\n",
-    "plot_confusion_matrix(Ytest.ravel(), Ytest_predicted, classes=class_names,\n",
-    "                      title='Confusion matrix, without normalization')\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot normalized confusion matrix\n",
-    "plot_confusion_matrix(Ytest.ravel(), Ytest_predicted, classes=class_names, normalize=True,\n",
-    "                      title='Normalized confusion matrix')\n",
-    "plt.show()\n"
-   ],
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1384,6 +1357,32 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "from utilities import plot_confusion_matrix\n",
+    "\n",
+    "tn, fp, fn, tp = confusion_matrix(Ytest.ravel(), Ytest_predicted).ravel()\n",
+    "print(\"TP={}, FP={}, FN={}, TP={}\".format(tn, fp, fn, tp))\n",
+    "print(\"Balanced error rate as 0.5*(fp/(tn+fp)+fn/(tp+fn))= {}\".format(0.5*(fp/(tn+fp)+fn/(tp+fn))))\n",
+    "print(\"Balanced error rate as 1-balanced_accuracy = {}\".format(1-accuracy_score(Ytest.ravel(), Ytest_predicted)))\n",
+    "\n",
+    "class_names = np.array([\"apple\", \"banana\"])\n",
+    "# Plot non-normalized confusion matrix\n",
+    "plot_confusion_matrix(Ytest.ravel(), Ytest_predicted, classes=class_names,\n",
+    "                      title='Confusion matrix, without normalization')\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot normalized confusion matrix\n",
+    "plot_confusion_matrix(Ytest.ravel(), Ytest_predicted, classes=class_names, normalize=True,\n",
+    "                      title='Normalized confusion matrix')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### Let's overlay the predictions on the scatter plot ..."
    ]
   },
@@ -1396,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1554,6 +1553,25 @@
     "</span>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
